<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="inputMethodManager"
            type="android.view.inputmethod.InputMethodManager" />

        <variable
            name="viewModel"
            type="com.mslabs.tangetco.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/actionForgot"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/actionForgot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:text="@string/login_bottom"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:background="@color/black" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="153dp"
                    android:layout_height="153dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Welcome"
                    android:textColor="#1A1A1A"
                    android:textSize="38sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Login"
                    android:textColor="#062A75"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/welcome" />

                <View
                    android:id="@+id/viewLayout"
                    android:layout_width="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginText"
                    android:layout_marginTop="12dp"
                    android:background="#062A75"
                    android:layout_height="4dp"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardUser"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/viewLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="54dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginEnd="38dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="@dimen/spacing_10_dp"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/input_user_name"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tangedco_login_username"
                        android:text="@{viewModel.loginUserName}"
                        android:textSize="14dp"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_margin="10dp"
                        android:padding="@dimen/spacing_10_dp"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/circle_greay"
                        />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/passwordCard"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/cardUser"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginEnd="38dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="@dimen/spacing_10_dp"
                    android:layout_height="wrap_content">
                    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                        android:id="@+id/input_password"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tangedco_login_password"
                        android:textSize="14dp"
                        android:text="@{viewModel.loginPassword}"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_margin="10dp"
                        android:inputType="textPassword"
                        android:padding="@dimen/spacing_10_dp"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/circle_greay"
                        />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/buttonCard"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordCard"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginEnd="38dp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="#062A75"
                    app:cardElevation="@dimen/spacing_10_dp"
                    android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:text="Login"
                    android:fontFamily="@font/poppins_regular"
                    app:layout_constraintTop_toBottomOf="@id/passwordCard"
                    android:background="#062A75"
                    android:textAllCaps="false"
                    android:textSize="16dp"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"/>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>